# freezerplate

./: .gitignore  README.md  TODO.md  build.sh  main.cpp  meson.build  meson.options  template.cpp  test-xml.cpp
docs/: building.md  for-developers.md  for-users.md  make-your-own.md
examples/: example-templ.xml  generate.sh  template.example.xml
examples/files/: index.html
examples/files/subfolder/: file.txt
man/: freezerplate.1
subprojects/: miniz.wrap
template/: LICENCE.md  README.md  build.sh  meson.build
